@@ -31,8 +31,8 @@ import org.apache.pig.newplan.OperatorPlan;
 import org.apache.pig.newplan.PlanVisitor;
 import org.apache.pig.newplan.ReverseDependencyOrderWalker;
 import org.apache.pig.newplan.logical.expression.LogicalExpressionPlan;
-import org.apache.pig.newplan.logical.expression.LogicalExpressionVisitor;
 import org.apache.pig.newplan.logical.expression.ProjectExpression;
+import org.apache.pig.newplan.logical.visitor.ResetProjectionAttachedRelationalOpVisitor;
 
 public class LOSort extends LogicalRelationalOperator{
     private List<Boolean> mAscCols;
@@ -198,23 +198,6 @@ public class LOSort extends LogicalRelationalOperator{
     
     public Operator getInput(LogicalPlan plan) {
         return plan.getPredecessors(this).get(0);
-    }
-
-    private static class ResetProjectionAttachedRelationalOpVisitor
-        extends LogicalExpressionVisitor {
-        private LogicalRelationalOperator attachedRelationalOp;
-
-        ResetProjectionAttachedRelationalOpVisitor (
-            LogicalExpressionPlan plan, LogicalRelationalOperator op )
-            throws FrontendException {
-            super(plan, new ReverseDependencyOrderWalker(plan));
-            this.attachedRelationalOp = op;
-
-        }
-        @Override
-        public void visit(ProjectExpression pe) throws FrontendException {
-            pe.setAttachedRelationalOp(attachedRelationalOp);
-        }
     }
 
     public static LOSort createCopy(LOSort sort) throws FrontendException {
