@@ -1,0 +1,45 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.pig.newplan.logical.visitor;
+
+import org.apache.pig.impl.logicalLayer.FrontendException;
+import org.apache.pig.newplan.ReverseDependencyOrderWalker;
+import org.apache.pig.newplan.logical.expression.LogicalExpression;
+import org.apache.pig.newplan.logical.expression.LogicalExpressionPlan;
+import org.apache.pig.newplan.logical.expression.LogicalExpressionVisitor;
+import org.apache.pig.newplan.logical.expression.ProjectExpression;
+import org.apache.pig.newplan.logical.relational.LogicalRelationalOperator;
+
+public class ResetProjectionAttachedRelationalOpVisitor
+        extends LogicalExpressionVisitor {
+    private LogicalRelationalOperator attachedRelationalOp;
+
+    public ResetProjectionAttachedRelationalOpVisitor (
+        LogicalExpressionPlan plan, LogicalRelationalOperator op )
+        throws FrontendException {
+        super(plan, new ReverseDependencyOrderWalker(plan));
+        this.attachedRelationalOp = op;
+
+    }
+
+    @Override
+    public void visit(ProjectExpression pe) throws FrontendException {
+        pe.setAttachedRelationalOp(attachedRelationalOp);
+    }
+}
