@@ -4793,6 +4793,24 @@ store C into ':OUTPATH:';\,
                                 I = limit H 3;
                                 J = foreach I generate contributions;
                                 STORE J INTO ':OUTPATH:.2';?,
+                    }, {
+                        # PIG-3641
+                        'num' => 6,
+                        'pig' => q?A = LOAD ':INPATH:/singlefile/votertab10k' AS (name, age, registration, contributions);
+                                -- dropping one column to force columnprune
+                                B = foreach A generate name, age, registration;
+                                -- Next line is the only difference
+                                SPLIT B into C1 if age > 50, C2 otherwise;
+                                D1 = foreach C1 generate age, registration;
+                                STORE D1 INTO ':OUTPATH:.1';
+                                STORE C2 INTO ':OUTPATH:.2';?,
+                        'verify_pig_script' => q?A = LOAD ':INPATH:/singlefile/votertab10k' AS (name, age, registration, contributions);
+                                -- dropping one column to force columnprune
+                                B = foreach A generate name, age, registration;
+                                SPLIT B into C1 if age > 50, C2 if age <= 50;
+                                D1 = foreach C1 generate age, registration;
+                                STORE D1 INTO ':OUTPATH:.1';
+                                STORE C2 INTO ':OUTPATH:.2';?,
                     }
                 ],
             },{
